<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcantina"
    tools:context=".MostraCardapio">

    <View
        android:id="@+id/box3"
        android:layout_width="375dp"
        android:layout_height="653dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="#373330"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/box4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/Branco"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/box3"
        app:layout_constraintStart_toStartOf="@+id/box3"
        app:layout_constraintTop_toTopOf="@+id/box3" />

    <TextView
        android:id="@+id/txtComposicao"
        android:layout_width="359dp"
        android:layout_height="168dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtComposicao"
        android:textAlignment="center"
        android:textColor="@color/Branco"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/box3"
        app:layout_constraintStart_toStartOf="@+id/box3"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <TextView
        android:id="@+id/CardapioTitulo"
        android:layout_width="136dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinnercustomizado"
        android:fontFamily="@font/archivo_narrow"
        android:text="@string/CardapioTitulo"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/box4"
        app:layout_constraintEnd_toEndOf="@+id/box4"
        app:layout_constraintStart_toStartOf="@+id/box4"
        app:layout_constraintTop_toBottomOf="@+id/iconeNome"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtTitulo"
        android:textAlignment="center"
        android:textColor="@color/Branco"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/box3"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/box3"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <ImageView
        android:id="@+id/iconeNome"
        android:layout_width="196dp"
        android:layout_height="165dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/box4"
        app:layout_constraintStart_toStartOf="@+id/box4"
        app:layout_constraintTop_toTopOf="@+id/box4"
        app:layout_constraintVertical_bias="0.151"
        app:srcCompat="@drawable/meal2" />

    <TextView
        android:id="@+id/txtPrecop"
        android:layout_width="243dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtPreco"
        android:textAlignment="center"
        android:textColor="@color/Branco"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/box3"
        app:layout_constraintEnd_toEndOf="@+id/box3"
        app:layout_constraintStart_toStartOf="@+id/box3"
        app:layout_constraintTop_toBottomOf="@+id/iconePreco"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iconePreco"
        android:layout_width="69dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="@+id/box3"
        app:layout_constraintStart_toStartOf="@+id/box3"
        app:layout_constraintTop_toBottomOf="@+id/txtComposicao"
        app:srcCompat="@drawable/preco" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="295dp" />

</android.support.constraint.ConstraintLayout>